--- a/mtcp/src/Makefile.in
+++ b/mtcp/src/Makefile.in
@@ -12,7 +12,7 @@ HWCSUM=@HWCSUM@
 MTCP_LIB_DIR=../lib
 MTCP_LIB=libmtcp.a
 MTCP_HDR_DIR=../include
-MTCP_HDR = mtcp_api.h mtcp_epoll.h
+MTCP_HDR = mtcp_api.h mtcp_epoll.h uthash.h
 
 ### GCC ###
 GCC=@CC@
