generate `config_base` with CMake.

--- a/dpdk-17.08/config/common_base.in
+++ b/dpdk-17.08/config/common_base.in
@@ -222,7 +222,7 @@ CONFIG_RTE_LIBRTE_MLX4_SOFT_COUNTERS=1
 #
 # Compile burst-oriented Mellanox ConnectX-4 & ConnectX-5 (MLX5) PMD
 #
-CONFIG_RTE_LIBRTE_MLX5_PMD=y
+CONFIG_RTE_LIBRTE_MLX5_PMD=${DPDK_CONFIG_RTE_LIBRTR_MLX5_PMD}
 CONFIG_RTE_LIBRTE_MLX5_DEBUG=n
 CONFIG_RTE_LIBRTE_MLX5_TX_MP_CACHE=8
 
